--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2193,4 +2193,9 @@
 body {
   background: #e2ebf3; }
 
+li {
+  list-style: none;
+  display: inline-block;
+  margin-right: 15px; }
+
 /*# sourceMappingURL=main.css.map */
