--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,11 +3,28 @@
 body {
   background: #e2ebf3;
 }
+button {
+	display: inline-block;
+}
+ul {
+	margin: 0;
+}
 li {
 	list-style: none;
 	display: inline-block;
-	margin-right: 15px;
+	margin-right: 25px;
+}
+i {
+	margin-right: 50px;
+}
+#helloWorld {
+	display: inline-block;
+	margin-left: 0;
 }
 #avatar {
 	width: 10%;
+}
+
+#editProfile {
+	display: none;
 }
